--- a/web/resources/index.html
+++ b/web/resources/index.html
@@ -4,24 +4,24 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta http-equiv='Content-Type' content='text/html;charset=UTF-8' />
 <title>web</title>
-<!-- 1.) Load SAPUI5 (from a remote server), select theme and control library -->
-<script src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
-	id="sap-ui-bootstrap" data-sap-ui-libs="sap.m"
+<!-- 
+	1.) Load SAPUI5 (from a remote server), select theme and control library 
+		Original src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
+	2.) Load SAPUI5 as a micro service
+-->
+<script src="{{{sapui5_sb.url}}}/resources/sap-ui-core.js"
+	id="sap-ui-bootstrap" data-sap-ui-libs="sap.m,sap.ui.table"
 	data-sap-ui-theme="sap_bluecrystal">
 		</script>
-<!-- 2.) Create a UI5 button and place it onto the page -->
 <script>
-	// create the button instance
-	var myButton = new sap.m.Button("btn");
 
-	// set properties, e.g. the text (there is also a shorter way of setting several properties)
-	myButton.setText("Hello World!");
+	var oModel = new sap.ui.model.odata.v2.ODataModel("/xsodata/purchaseOrder.xsodata", true);
+	var oTable = new sap.ui.table.Table({ title: "My first table" });
+	oTable.addColumn(new sap.ui.table.Column({ label: "PO ID", template: "PURCHASEORDERID" }));
+	oTable.setModel(oModel);
+	oTable.bindRows("/POHeader");
+	oTable.placeAt("uiArea");
 
-	// attach an action to the button's "press" event (use jQuery to fade out the button)
-	myButton.attachPress(function(){$("#btn").fadeOut()});
-
-	// place the button into the HTML element defined below
-	myButton.placeAt("uiArea");
 	</script>
 </head>
 <body class="sapUiBody">
